crates/musq-macros/tests/trybuild/fail_sql_malformed.stderr
error: malformed placeholder
 --> tests/trybuild/fail_sql_malformed.rs:4:13
  |
4 |     let _ = sql!("SELECT {ident}")?;
  |             ^^^^^^^^^^^^^^^^^^^^^^
  |
  = note: this error originates in the macro `sql` (in Nightly builds, run with -Z macro-backtrace for more info)
