crates/musq-macros/tests/trybuild/fail_sql_malformed.rs
use musq::*;

fn main() -> musq::Result<()> {
    let _ = sql!("SELECT {ident}")?;
    Ok(())
}
